--- a/scss/style/_variables.scss
+++ b/scss/style/_variables.scss
@@ -1,4 +1,9 @@
 $font-title: 'Pacifico',
 cursive;
-$color-main: #cb1991;
-$color-background: #1f1f1f;
+$color-main: #F19FBF;
+$color-logo: #9AD7F8;
+$color-background: #070707;
+$font-regular: 'Gugi',
+cursive;
+// font-family: 'Gugi', cursive;
+// font-family: 'Lato', sans-serif;
