--- a/scss/style/_variables.scss
+++ b/scss/style/_variables.scss
@@ -5,5 +5,5 @@ $color-logo: #9AD7F8;
 $color-background: #070707;
 $font-regular: 'Gugi',
 cursive;
-// font-family: 'Gugi', cursive;
-// font-family: 'Lato', sans-serif;
+$font-basic: 'Lato',
+sans-serif;
