--- a/scss/style/_search.scss
+++ b/scss/style/_search.scss
@@ -26,16 +26,26 @@ form {
         // height: 20px;
         // padding-top: 50px;
     }
+    // input[type=text]:focus {
+    //     border: 3px solid #555;
+    // }
     input {
         margin-left: 15px;
         height: 50px;
-        width: 50vw;
+        width: 30vw;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        font-size: 20px;
+        padding-left: 15px;
     }
     select {
         height: 50px;
     }
     button {
         height: 50px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        width: 100px
     }
 }
 
@@ -99,6 +109,7 @@ form {
         }
         p {
             margin-top: 10px;
+            color: #fff;
         }
     }
 }
