--- a/scss/style/_barman.scss
+++ b/scss/style/_barman.scss
@@ -28,6 +28,9 @@
         margin-bottom: 20px;
         padding-bottom: 20px;
     }
+    #dr2 {
+        margin: 0 20px;
+    }
     .svg {
         width: 400px;
         height: 450px;
@@ -41,19 +44,23 @@
         flex-wrap: wrap;
         align-content: center;
         .draggable {
-            width: 95px;
-            height: 120px;
+            // &:hover {
+            //     cursor: pointer;
+            // }
+            z-index: 5;
+            width: 60px;
+            height: 80px;
             align-self: center;
             .ingredient {
                 border: none;
-                width: 80px;
-                height: 100px;
+                width: 60px;
+                height: 80px;
                 img {
                     width: 50px;
                     height: 50px;
                 }
                 p {
-                    font-size: 12px;
+                    display: none;
                 }
             }
         }
@@ -68,6 +75,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 70vh;
     p {
         width: 20vw;
         font-size: 18px;
