--- a/scss/style/_barman.scss
+++ b/scss/style/_barman.scss
@@ -1,4 +1,3 @@
-@import 'variables';
 .barman {
     background-image: url(../../img/5139493db68077463014ef9382820a92.jpg);
     background-position: center;
@@ -90,6 +89,9 @@
 }
 
 .ingredient {
+    &:hover {
+        transform: scale(1.1);
+    }
     width: 95px;
     height: 120px;
     display: flex;
@@ -135,25 +137,6 @@
     }
 }
 
-.checked {
-    background-color: $color-logo;
-}
-
-.green {
-    background-color: green
-}
-
-.red {
-    background-color: red
-}
-
-.wrong {
-    background-image: url('https://cdn.pixabay.com/photo/2016/09/07/10/37/kermit-1651325_960_720.jpg');
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
 .imgDrink {
     border: 2px solid #fff;
     border-radius: 10px;
@@ -166,6 +149,7 @@
     text-align: center;
     margin: 40px auto;
     background-color: $color-background;
+    margin-bottom: 100px;
     h1 {
         color: $color-main;
         font-family: $font-regular;
@@ -181,5 +165,13 @@
     }
     button {
         margin: 20px 20px;
+        width: 150px;
+        border-radius: 10px;
+        height: 30px;
+        font-weight: 700;
+        align-self: center;
+        color: $color-main;
+        border: 2px solid $color-main;
+        background-color: $color-background;
     }
 }
