--- a/scss/style/_footer.scss
+++ b/scss/style/_footer.scss
@@ -1,3 +1,35 @@
 .footer {
-    height: 10vh;
+    // height: 10vh;
+    // display: flex;
+    // justify-content: space-between;
+    margin-bottom: 10px;
+    color: #fff;
+    .logo {
+        font-size: 14px;
+        h3 {
+            margin-top: -5px;
+        }
+    }
+    p {
+        font-size: 10px;
+        span {
+            color: $color-main;
+        }
+    }
+    a {
+        text-decoration: none;
+        color: #fff;
+    }
+}
+
+p.hol {
+    width: 100%;
+    font-weight: 700;
+    font-size: 18px;
+    margin: 15px auto 10px auto;
+    text-align: center;
+    a {
+        color: $color-main;
+        text-decoration: none;
+    }
 }
