--- a/scss/style/_search.scss
+++ b/scss/style/_search.scss
@@ -1,4 +1,3 @@
-@import 'variables';
 .mainTitle {
     color: $color-main;
     font-family: $font-title;
@@ -67,6 +66,7 @@ form {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    // height: 15vh;
     .drink {
         border: 2px solid #fff;
         border-radius: 10px;
