--- a/scss/style/_coneser.scss
+++ b/scss/style/_coneser.scss
@@ -3,7 +3,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 75vh;
+    // height: 75vh;
     .logo {
         width: 250px;
         height: 250px;
